xedoc-rs/tui/src/snapshots/xedoc_tui__update_prompt__tests__update_prompt_modal.snap
---
source: tui/src/update_prompt.rs
expression: terminal.backend()
---

  ✨ Update available! 1.0.0 -> 9.9.9

  Release notes: https://github.com/apohl79/codex/releases/latest

› 1. Update now (runs `sh -c 'curl -fsSL                                        
     https://raw.githubusercontent.com/apohl79/codex/main/scripts/install/install
     .sh | sh'`)                                                                
  2. Skip
  3. Skip until next version

  Press enter to continue
